assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');


* {
    margin: 0;
    padding: 0;
}

body {
    width: 100%;
    background-image: url('../images/zimmerBack.webp');
    background-size: cover;
    background-position-x: 48%;
    background-position-y: center;
    background-repeat: no-repeat;
    align-items: center;
    height: 100vh;
}

h1 {
    font-size: 30px;
    font-family: "Finger Paint", sans-serif;
    color: #FFDBEE;
    text-align: center;
}

h2 {
    text-align: center;
    margin-bottom: 30px;
    font-size: 24px;
    font-weight: 700;
}

h3 {
    text-align: center;
    margin-bottom: 30px;
    font-size: 24px;
    font-weight: 700;
}

h4 {
    font-size: 20px;
    text-align: center;
    margin-top: 30px;
}

p {
    max-width: 400px;
    font-size: 20px;
    line-height: 1.5em;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: #FFDBEE;
    text-align: center;
    margin: 0 20px;
}

strong {
    font-family: "Finger Paint", sans-serif;
}

#logo-instructions {
    margin-top: 20px;
}

span {
    padding: 5px 10px;
    position: relative;
    top: -7px;
}

span i {
    font-size: 20px;
}

#enter-main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 100%;
}



#enter-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    align-items: center;
    margin-bottom: 30px;
}

#enter-button {
    width: 80%;
    height: 60px;
    font-size: 28px;
}

#name-area {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    height: 100%;
}

#name-field {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: space-around;
    gap: 10px;
    margin-bottom: 20px;
}

#label-name {
    background-color: #3A001E;
    color: #FFDBEE;
    font-size: 30px;
    font-family: Verdana;
    font-weight: 700;
    border: 3px solid #A14276;
    border-radius: 10px;
    padding: 5px 10px;
}

#name {
    width: 70%;
    height: 40px;
    border-radius: 10px;
    background-color: #3A001EBB;
    color: #FFDBEE;
    font-size: 28px;
    font-family: monospace;
    padding: 5px 10px;
    border: 3px solid #3A001E;
    font-weight: 700;
}

#name::placeholder {
    color: #3A001E;
    font-size: 20px;
    opacity: 0.7;
}

#submit-button {
    width: 65%;
    height: 60px;
    font-size: 24px;
    font-family: monospace;
    font-weight: 700;
}

#submit-button:disabled {

    background-color: #777;
}

#quiz-section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
    width: 100%;
}

#questions {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}


#choices {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 20px;
    gap: 15px;
}

#choices button {
    font-size: 24px;
    width: 75%;
    height: 60px;
}

#listen-button {
    width: 100%;
    max-width: 200px;
    height: 100px;
    font-size: 60px;
}

#score-section {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.text-field {
        width: 80%;
        height: 75%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-evenly;
        background-color: #3A001E;
        font-family: Verdana, Geneva, Tahoma, sans-serif;
        border: 3px solid #A14276;
        background-color: #3A001EBB;
        color: #FFDBEE;
        padding: 15px 10px;
        border-radius: 15px;
}


#score-title {
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 30px;
    color: #FFDBEE;
    text-align: center;
    margin: 0px 2px;
    margin-top: 25px;
}

#score-field {
    display: flex;
    flex-direction: column;
}



#correctScore,
#incorrectScore {
    font-family: "Finger Paint", sans-serif;
    font-size: 30px;
    color: #FFDBEE;
}

#incorrectScore span, #correctScore span {
    font-size: 40px;
}


#correctScore {
    margin-bottom: 0px;
}

#play-again-field {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
}

#play-again {
    width: 75%;
    height: 80px;
    font-size: 24px;
}

#error-cont {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    height: 100%;
    padding: 10px;
}

#error {
    margin-top: 300px;
    height: 30%
}

#error h3 {
    margin-top: 20px;
}

#get-back {
    font-size: 30px;
    width: 300px;
    height: 60px;
}

.type-two-button {
    background-color: #A14276;
    color: #FFDBEE;
    border: 3px solid #3A001E;
    border-radius: 10px;
}

.type-one-button {
    background-color: #3A001E;
    color: #FFDBEE;
    border: 3px solid #A14276;
    border-radius: 10px;
}

/* Media Queries */

@media (pointer: fine) {
    .type-one-button:hover:not(:disabled) {
        background-color: #A14276;
        color: #3A001E;
        border: 3px solid #3A001E;
    }

    .type-two-button:hover:not(:disabled) {
        background-color: #3A001E;
        color:#A14276;
        border-color: #A14276;
    }

}

@media only screen and (min-width: 320px) {
    body {
        background-size: cover;
    }
    h1 {
        font-size: 30px;
    }

    #choices {
        margin-bottom: 30px;
    }

    #choices button {
        font-size: 28px;
        max-width: 400px;
        height: 70px;
        margin-bottom: 20px;
    }
    #listen-button {
        height: 120px;
    }
}

@media only screen and (min-width: 768px) {
    body {
        background-size: cover;
    }
    #choices button {
        max-width: 400px;
        margin-top: 10px;
    }

    #enter-button {
        max-width: 400px;
    }

    #name {
        max-width: 300px;
    }

    #submit-button {
        max-width: 250px;
    }

    #name::placeholder {
        font-size: 25px;
    }
    .text-field {
        height: 70%;
    }
    #play-again {
        max-width: 400px;
    }
}

@media only screen and (min-width: 768px) and (height: 1024px) {
    body {
        background-size: cover;
    }
}

@media only screen and (min-width: 992px) {
    body {
        background-size: cover;
    }

    #choices button {
        max-width: 400px;
        margin-top: 5px;
    }

    button {
        cursor: pointer;
    }
}

@media only screen and (min-width: 1200px) {
    body {
        background-size: cover;
    }

    #choices button {
        max-width: 400px;
        font-size: 32px;
        margin-bottom: 10px;
    }

    #name {
        max-width: 400px;
    }
    #error {
        margin-top: 200px;
    }
    h1 {
        font-size: 50px;
    }
}

